# bchess

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bchess.cpp
src/: bench.cpp  bench.h  bitboard.cpp  bitboard.h  chess.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  fixed_vector.h  main.cpp  movegen.cpp  movegen.h  movehistory.cpp  movehistory.h  movepicker.cpp  movepicker.h  perft.cpp  perft.h  position.cpp  position.h  test.cpp  test.h  tt.cpp  tt.h  uci.cpp  uci.h  uci_option.cpp  uci_option.h  utils.h  zobrist.cpp  zobrist.h
